[gd_scene load_steps=12 format=3 uid="uid://chdm6eg6g6w85"]

[ext_resource type="Script" uid="uid://b65n1ee1mdhht" path="res://_core/level_system/boss_cutscene_manager.gd" id="1_m1wey"]
[ext_resource type="Texture2D" uid="uid://dkwt03ofux3o4" path="res://assets/art/characters/slime/slime_attack.png" id="2_mgl5f"]
[ext_resource type="Texture2D" uid="uid://p01ehf7ouddw" path="res://assets/art/characters/slime/slime_loncat.png" id="3_pwjy0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgl5f"]
size = Vector2(8, 322)

[sub_resource type="Animation" id="Animation_m1wey"]
resource_name = "IntroSequence"
length = 9.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5, 3, 4, 9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"anim_setup_camera"
}, {
"args": [],
"method": &"anim_slime_set"
}, {
"args": [],
"method": &"anim_slime_walkto"
}, {
"args": [],
"method": &"anim_spawn_boss_morph"
}, {
"args": [],
"method": &"anim_boss_roar"
}, {
"args": [],
"method": &"anim_finish"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 272), Vector2(288, 272)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlimeContainer/Slime1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(216, -3), Vector2(216, -3), Vector2(288, -3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SlimeContainer/Slime2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(167, -3), Vector2(167, -3), Vector2(288, -3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeContainer/Slime3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(436, -3), Vector2(436, -3), Vector2(288, -3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SlimeContainer/Slime4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(373, -297), Vector2(373, -3), Vector2(288, -3)]
}

[sub_resource type="Animation" id="Animation_mgl5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 272)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlimeContainer/Slime1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(216, -3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlimeContainer/Slime2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(167, -3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SlimeContainer/Slime3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(436, -3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeContainer/Slime4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(373, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mgl5f"]
_data = {
&"IntroSequence": SubResource("Animation_m1wey"),
&"RESET": SubResource("Animation_mgl5f")
}

[sub_resource type="Animation" id="Animation_v6m0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mgl5f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_g7807"]
resource_name = "Set"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mgl5f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pwjy0"]
resource_name = "Walkto"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_pwjy0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oavoe"]
_data = {
&"RESET": SubResource("Animation_v6m0l"),
&"Set": SubResource("Animation_g7807"),
&"Walkto": SubResource("Animation_pwjy0")
}

[node name="BossCutsceneManager" type="Node2D"]
script = ExtResource("1_m1wey")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(3, 151)
shape = SubResource("RectangleShape2D_mgl5f")
debug_color = Color(0.78293204, 0.43540412, 1.92523e-07, 0.41960785)

[node name="BossSpawnPos" type="Marker2D" parent="."]
position = Vector2(288, 291)

[node name="CutsceneDirector" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mgl5f")
}

[node name="CameraStartPos" type="Marker2D" parent="."]
position = Vector2(8, 272)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 272)
enabled = false
zoom = Vector2(1.5, 1.5)

[node name="ArenaCenterPos" type="Marker2D" parent="."]
position = Vector2(288, 192)

[node name="SlimeContainer" type="Node2D" parent="."]
position = Vector2(0, 307)

[node name="Slime1" type="Node2D" parent="SlimeContainer"]
position = Vector2(216, -3)

[node name="Sprite2D" type="Sprite2D" parent="SlimeContainer/Slime1"]
texture = ExtResource("2_mgl5f")
hframes = 4
frame = 1

[node name="SlimePlayer" type="AnimationPlayer" parent="SlimeContainer/Slime1"]
libraries = {
&"": SubResource("AnimationLibrary_oavoe")
}

[node name="Slime2" type="Node2D" parent="SlimeContainer"]
position = Vector2(167, -3)

[node name="Sprite2D" type="Sprite2D" parent="SlimeContainer/Slime2"]
texture = ExtResource("2_mgl5f")
hframes = 4
frame = 1

[node name="SlimePlayer" type="AnimationPlayer" parent="SlimeContainer/Slime2"]
libraries = {
&"": SubResource("AnimationLibrary_oavoe")
}

[node name="Slime3" type="Node2D" parent="SlimeContainer"]
position = Vector2(436, -3)

[node name="Sprite2D" type="Sprite2D" parent="SlimeContainer/Slime3"]
texture = ExtResource("2_mgl5f")
hframes = 4
frame = 1

[node name="SlimePlayer" type="AnimationPlayer" parent="SlimeContainer/Slime3"]
libraries = {
&"": SubResource("AnimationLibrary_oavoe")
}

[node name="Slime4" type="Node2D" parent="SlimeContainer"]
position = Vector2(373, -3)

[node name="Sprite2D" type="Sprite2D" parent="SlimeContainer/Slime4"]
texture = ExtResource("2_mgl5f")
hframes = 4
frame = 1

[node name="SlimePlayer" type="AnimationPlayer" parent="SlimeContainer/Slime4"]
libraries = {
&"": SubResource("AnimationLibrary_oavoe")
}
